--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,14 @@
-version: '2'
+version: '3.8'
 
 services:
-  app:
-    image: 'docker-spring-boot-postgres:latest'
-    build:
-      context: .
-    container_name: app
-    depends_on:
-      - db
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/compose-postgres
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
-
   db:
-    image: 'postgres:13.1-alpine'
-    container_name: db
+    image: 'docker-spring-boot-postgres:latest'
+    restart: always
+    container_name: a3_rota_menor_custo
     environment:
-      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+    ports:
+      - 5434:5432
+    volumes:
+      - ./init.sh
